--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,9 +1,12 @@
 <%- include("header") -%>
 
-<form class="" action="/compose" method="post">
-<input type="text" name="title" value="">
-<input type="text" name="body" value="">
-<button type="submit" name="button"></button>
-</form>
+<div class="container">
+  <form class="" action="/compose" method="post">
+    <input type="text" name="title" value="">
+    <input type="text" name="body" value="">
+    <button class="btn btn-lg btn-primary" type="submit" name="button">Submit</button>
+  </form>
+</div>
+
 
 <%- include("footer") -%>
