--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,10 +1,19 @@
 <%- include("header") -%>
 
-<div class="container">
+<div class="content container">
   <form class="" action="/compose" method="post">
-    <input type="text" name="title" value="">
-    <input type="text" name="body" value="">
-    <button class="btn btn-lg btn-primary" type="submit" name="button">Submit</button>
+    <h1>Compose</h1>
+    <div class="form-group">
+      <label for="title-text-area">Title</label>
+      <input type="text" class="form-control" id="title-text-area" name="title">
+    </div>
+
+    <div class="form-group">
+      <label for="body-text-area">Post</label>
+      <textarea class="form-control rounded-0" id="body-text-area" rows="10" name="body"></textarea>
+    </div>
+
+    <button class="btn btn-lg btn-primary" type="submit" name="button">Publish</button>
   </form>
 </div>
 
